# lib/db/src/schema/jobs.ts
@@ -6,7 +6,10 @@ export const trainingJobsTable = pgTable("training_jobs", {
   id: text("id").primaryKey(),
   modelId: text("model_id").notNull(),
   modelName: text("model_name").notNull(),
+  nickname: text("nickname"),
+  taskType: text("task_type"),
   datasetId: text("dataset_id").notNull(),
+  datasetName: text("dataset_name"),
   textColumn: text("text_column").notNull(),
   labelColumn: text("label_column").notNull(),
   epochs: integer("epochs").notNull(),
